order-shipped email implemented with Rabbitmq